--- a/src/components/Category.css
+++ b/src/components/Category.css
@@ -1,7 +1,83 @@
 .cardsContainer {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  background-color: #fa4f91;
+  grid-template-rows: auto;
+}
+
+.row:nth-child(1) {
+  background-color: #4369b0;
+}
+
+.row:nth-child(2) {
+  background-color: #3d60a4;
+}
+
+.row:nth-child(3) {
+  background-color: #3d60a4;
+}
+
+.row:nth-child(4) {
+  background-color: #4369b0;
+}
+
+.row:nth-child(5) {
+  background-color: #4369b0;
+}
+
+.row:nth-child(6) {
+  background-color: #3d60a4;
+}
+
+.row:nth-child(7) {
+  background-color: #3d60a4;
+}
+
+.row:nth-child(8) {
+  background-color: #4369b0;
+}
+
+.row:nth-child(9) {
+  background-color: #4369b0;
+}
+
+.row:nth-child(10) {
+  background-color: #3d60a4;
+}
+
+.row:nth-child(11) {
+  background-color: #3d60a4;
+}
+
+.row:nth-child(12) {
+  background-color: #4369b0;
+}
+
+.row:nth-child(13) {
+  background-color: #4369b0;
+}
+
+.row:nth-child(14) {
+  background-color: #3d60a4;
+}
+
+.row:nth-child(15) {
+  background-color: #3d60a4;
+}
+
+.row:nth-child(16) {
+  background-color: #4369b0;
+}
+
+.row:nth-child(17) {
+  background-color: #4369b0;
+}
+
+.row:nth-child(18) {
+  background-color: #3d60a4;
+}
+
+.row:nth-child(19) {
+  background-color: #3d60a4;
 }
 
 .flexColumn {
@@ -14,7 +90,7 @@
   justify-content: center;
   align-items: flex-end;
   padding: 18px;
-  background-color: #fa4f91;
+  background-color: #5687e3;
 }
 
 .header h2 {
@@ -25,4 +101,12 @@
 .header span {
   font-size: 14px;
   font-weight: 600px;
+}
+
+.byRegion {
+  padding: 5px;
+  font-size: 14px;
+  font-weight: 600;
+  color: white;
+  background-color: #35548B;
 }
