--- a/src/components/Category.css
+++ b/src/components/Category.css
@@ -1,7 +1,59 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
+
+.lato {
+  font-family: 'Lato', sans-serif;
+}
+
+.flexColumn {
+  display: flex;
+  flex-direction: column;
+}
+
+.header {
+  height: 110px;
+  color: white;
+  justify-content: center;
+  align-items: flex-end;
+  padding: 18px;
+  background-color: #5687e3;
+  background-image: url('./map.png');
+  background-position: center;
+  background-position-x: 30px;
+  background-repeat: no-repeat;
+  background-size: 10em;
+}
+
+.header h2 {
+  margin: 0;
+  font-size: 22px;
+  font-weight: 700;
+}
+
+.header span {
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.infoContainer {
+  width: 40%;
+}
+
+.byRegion {
+  padding: 5px;
+  font-size: 12px;
+  font-weight: 400;
+  color: white;
+  background-color: #35548B;
+}
+
 .cardsContainer {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto;
+}
+
+.row {
+  text-decoration: none;
 }
 
 .row:nth-child(1) {
@@ -80,33 +132,6 @@
   background-color: #3d60a4;
 }
 
-.flexColumn {
-  display: flex;
-  flex-direction: column;
-}
-
-.header {
-  color: white;
-  justify-content: center;
-  align-items: flex-end;
-  padding: 18px;
-  background-color: #5687e3;
-}
-
-.header h2 {
-  font-size: 24px;
-  font-weight: 600;
-}
-
-.header span {
-  font-size: 14px;
-  font-weight: 600px;
-}
-
-.byRegion {
-  padding: 5px;
-  font-size: 14px;
-  font-weight: 600;
-  color: white;
-  background-color: #35548B;
+.empty {
+  background-color: #4369b0;
 }
