--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
+
+.latoLight {
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+}
+
 .navBarFlex {
   display: flex;
 }
