--- a/src/components/Category.css
+++ b/src/components/Category.css
@@ -43,7 +43,7 @@
   font-size: 12px;
   font-weight: 400;
   color: white;
-  background-color: #35548B;
+  background-color: #35548b;
 }
 
 .cardsContainer {
