--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -14,7 +14,7 @@
   padding: 15px 10px;
   justify-content: space-between;
   align-items: center;
-  background-color: #4369B2;
+  background-color: #4369b2;
   color: white;
 }
 
