--- a/src/pages/Details.css
+++ b/src/pages/Details.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
 
 .latoRegular {
-  font-family: 'Lato',sans-serif;
+  font-family: 'Lato', sans-serif;
   font-weight: 400;
 }
 
@@ -38,7 +38,7 @@
   font-size: 12px;
   font-weight: 400;
   color: white;
-  background-color: #35548B;
+  background-color: #35548b;
 }
 
 .regionsContainer {
